cabal-version:      2.4
name:               dumblog
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:
license-file:       LICENSE
author:             Daniel Gustafsson, Stevan Andjelkovic
maintainer:
  daniel.gustafsson@symbiont.io,
  symbiont-stevan-andjelkovic@users.noreply.github.com

copyright:          Copyright (c) 2021-2022 Symbiont Inc

-- category:
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

flag persistent-sqlite
  description:
    Enable compilation of the (slower) persitent-sqlite db module

  manual:      True
  default:     False

common library-common
  build-depends:
    , base              ^>=4.14.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -O2

library dumblog-lib-common
  import: library-common
  build-depends:
    , binary
    , bytestring
    , journal
    , http-client
    , time
    , warp
  exposed-modules:
    Dumblog.Common.Constants
    Dumblog.Common.HttpClient
    Dumblog.Common.Metrics
    Dumblog.Common.Types
    Dumblog.Common.Utils
  hs-source-dirs: src/common

library dumblog-lib-metrics
  import: library-common
  build-depends:
    , directory
    , dumblog-lib-common
    , journal
    , time
  exposed-modules:
    Dumblog.Metrics.Main
  hs-source-dirs: src/metrics

library dumblog-lib-sqlite
  import: library-common
  build-depends:
    , async
    , bytestring
    , directory
    , dumblog-lib-common
    -- import journal for metrics
    , journal
    , http-types
    , sqlite-simple
    , stm
    , text
    , wai
    , warp
  if flag(persistent-sqlite)
    build-depends:
      , persistent
      , persistent-sqlite
  exposed-modules:
    Dumblog.SQLite.Command
    Dumblog.SQLite.DB
    Dumblog.SQLite.FrontEnd
    Dumblog.SQLite.Main
    Dumblog.SQLite.Worker
  hs-source-dirs: src/sqlite

library dumblog-lib-journal
  import: library-common
  build-depends:
    , aeson
    , async
    , binary
    , bytestring
    , containers
    , detsys-debugger
    , directory
    , dumblog-lib-common
    , filepath
    , http-types
    , journal
    , optparse-generic
    , text
    , tree-diff ==0.0.2.1
    , vector
    , wai
    , warp
  exposed-modules:
    Dumblog.Journal.Blocker
    Dumblog.Journal.Codec
    Dumblog.Journal.FrontEnd
    Dumblog.Journal.Logger
    Dumblog.Journal.Main
    Dumblog.Journal.Snapshot
    Dumblog.Journal.StateMachine
    Dumblog.Journal.Types
    Dumblog.Journal.Versions
    Dumblog.Journal.Worker
  hs-source-dirs: src/journal

library dumblog-lib-zero-copy
  import: library-common
  build-depends:
    , async
    , bytestring
    , journal
    , network
    , sendfile
    , vector
  exposed-modules:
    Dumblog.ZeroCopy.HttpServer
    Dumblog.ZeroCopy.Main
    Dumblog.ZeroCopy.State
    Dumblog.ZeroCopy.Worker
  hs-source-dirs: src/zero-copy

common executable-common
  build-depends:
    , base
    , dumblog-lib-common

  default-language: Haskell2010
  ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N

executable dumblog-journal
  import:         executable-common
  build-depends:
    , async
    , directory
    , dumblog-lib-journal
    , journal
    , optparse-generic

  hs-source-dirs: app/journal
  main-is:        Main.hs

executable dumblog-sqlite
  import:         executable-common
  build-depends:  dumblog-lib-sqlite
  hs-source-dirs: app/sqlite
  main-is:        Main.hs

executable dumblog-zero-copy
  import:         executable-common
  build-depends:  dumblog-lib-zero-copy
  hs-source-dirs: app/zero-copy
  main-is:        Main.hs

executable metrics
  import:         executable-common
  build-depends:  dumblog-lib-metrics
  hs-source-dirs: app/metrics
  main-is:        Main.hs

common bench-common
  hs-source-dirs:   bench
  build-depends:
    , async
    , base
    , bytestring
    , directory
    , dumblog-lib-common
    , random
    , time

  other-modules:    Common

  -- Some of these options are taking from:
  --   https://wiki.haskell.org/Performance/GHC#Use_optimisation
  -- XXX: try with -fllvm

  -- To inspect core:
  -- -fforce-recomp
  -- -ddump-simpl
  -- -dsuppress-all
  -- -ddump-to-file
  --
  -- To produce event log:
  -- -threaded -eventlog -rtsopts -with-rtsopts=-N
  ghc-options:
    -O2 -fproc-alignment=64 -fexcess-precision -fasm -optc-O3
    -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010

benchmark bench-journal
  import:         bench-common
  build-depends:  dumblog-lib-journal
  hs-source-dirs: bench/journal
  main-is:        Main.hs
  type:           exitcode-stdio-1.0

benchmark bench-sqlite
  import:         bench-common
  build-depends:  dumblog-lib-sqlite
  hs-source-dirs: bench/sqlite
  main-is:        Main.hs
  type:           exitcode-stdio-1.0

benchmark bench-zero-copy
  import:         bench-common
  build-depends:  dumblog-lib-zero-copy
  hs-source-dirs: bench/zero-copy
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
