load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "register",
    srcs = [
        "frontend1.go",
        "frontend2.go",
        "frontend3.go",
        "frontend4.go",
        "marshaler.go",
        "messages.go",
        "register.go",
    ],
    importpath = "github.com/symbiont-io/detsys-testkit/src/sut/register",
    visibility = ["//visibility:public"],
    deps = ["//src/lib"],
)

go_test(
    name = "register_test",
    srcs = ["example_test.go"],
    embed = [":register"],
    deps = [
        "//src/executor",
        "//src/lib",
    ],
)
