load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "detsys-debug",
    embed = [":detsys-debug_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "detsys-debug_lib",
    srcs = ["main.go"],
    importpath = "github.com/symbiont-io/detsys-testkit/src/debugger/cmd/detsys-debug",
    visibility = ["//visibility:private"],
    deps = [
        "//src/debugger/internal",
        "//src/debugger/vendor/github.com/gdamore/tcell/v2:tcell",
        "//src/debugger/vendor/github.com/nsf/jsondiff",
        "//src/debugger/vendor/github.com/rivo/tview",
        "//src/debugger/vendor/github.com/symbiont-io/detsys-testkit/src/lib",
    ],
)
